--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon src/server.ts",
     "build": "tsc",
-    "serve": "node build/server.js"
+    "serve": "node build/server.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,18 @@
   "homepage": "https://github.com/tkhunkhe/full-stack-react-test#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
+    "jest": "^27.5.0",
     "nodemon": "^2.0.15",
+    "prisma": "^3.8.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.1",
+    "body-parser": "^1.19.1",
     "express": "^4.17.2"
   }
 }
