--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon src/server.ts",
     "build": "tsc",
     "serve": "node build/server.js",
-    "test": "jest"
+    "test": "jest tests/"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,9 @@
   },
   "dependencies": {
     "@prisma/client": "^3.9.1",
+    "axios": "^0.25.0",
     "body-parser": "^1.19.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2"
   }
 }
