--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "checkpoints admin dashboard web app for Chainstarts full-stack test",
   "main": "server.js",
   "scripts": {
-    "start": "node build/server.js",
-    "dev": "nodemon src/server.ts",
-    "build": "tsc"
+    "start": "nodemon src/server.ts",
+    "build": "tsc",
+    "serve": "node build/server.js"
   },
   "repository": {
     "type": "git",
