--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
     "start": "nodemon src/server.ts",
     "build": "tsc",
     "serve": "node build/server.js",
-    "test": "jest tests/"
+    "test": "jest tests/",
+    "generate-mocked-data": "npx ts-node tests/mocked-data/run-generate-mocked-data.ts",
+    "init-test-db": "npx ts-node tests/mocked-data/run-init-test-db.ts",
+    "prisma:migrate-init": "npx prisma migrate dev --name \"init\" --preview-feature"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
+    "csv-parser": "^3.0.0",
+    "fs": "^0.0.1-security",
     "jest": "^27.5.0",
     "nodemon": "^2.0.15",
     "prisma": "^3.8.1",
@@ -35,6 +40,7 @@
     "axios": "^0.25.0",
     "body-parser": "^1.19.1",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "moment": "^2.29.1"
   }
 }
