--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@prisma/client": "^3.9.1",
     "axios": "^0.25.0",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "moment": "^2.29.1"
